--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "classnames": "^2.3.2",
     "next": "15.5.3",
+    "prisma": "^5.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^4.11.0"
