--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^4.11.0",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
