--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.12.2",
     "classnames": "^2.3.2",
     "next": "15.5.3",
     "prisma": "^5.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.64.0",
     "react-icons": "^4.11.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
